java-demo-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-demo-app
  namespace: java-demo-app
spec:
  ingressClassName: traefik
  rules:
    - host: java-demo-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: java-demo-app
                port:
                  number: 80
